--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+nbproject/private/private.properties
+nbproject/project.xml
+nbproject/project.properties
