--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ nbproject/private/private.properties
 nbproject/project.xml
 nbproject/project.properties
 /nbproject/private/
+application/config/config.php
+application/config/config.php
+application/config/database.php
