--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ nbproject/project.properties
 /nbproject/private/
 application/config/config.php
 application/config/database.php
+application/config/database.php
+application/config/database.php
