--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ nbproject/private/private.properties
 nbproject/project.xml
 nbproject/project.properties
 /nbproject/private/
+application/config/database.php
