--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ nbproject/project.xml
 nbproject/project.properties
 /nbproject/private/
 application/config/database.php
+application/config/database.php
